--- a/src/tailwind.generated.css
+++ b/src/tailwind.generated.css
@@ -14414,10 +14414,13 @@ body {
 
 .project-thumbnail {
   width: 100%;
+  overflow-y: hidden;
+  max-height: 600px;
 }
 
 .project-thumbnail img {
-  width: 100%;
+  max-width: 100%;
+  object-fit: fill;
 }
 
 .project-title {
